<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Media Note</string>
    
    <!-- title -->
    <string name="dialog_addtitle_title">Titolo</string>
    <string name="dialog_addtitle_hint">Inserisci il titolo</string>
    
    <!-- edit -->
    <string name="titolo">Titolo</string>
	<string name="content">Contenuto</string>
	<string name="text_here">Inserisci il testo&#8230;&#8230;&#8230;</string>
	
	<!-- html editor -->
	<string name="bold">  B  </string>
    <string name="italic">  I  </string>
    <string name="strike">  S  </string>
    <string name="underline">  U  </string>
    <string name="link">Link</string>  
    
    <!-- data ora -->
    <string name="dialog_datetime">Aggiungi al calendario</string>
    <string name="button_setdate">data</string>
    <string name="button_settime">ora</string>
    
    <!-- link -->
    <string name="dialog_link_hint">http://</string>
    
    <!-- audio -->
    <string name="title_dialog_audiocapture">Parla adesso&#8230;&#8230;&#8230;</string>
    <string name="label_dialog_audiocapture">premi INDIETRO per annullare</string>
	<string name="label_dialog_audiocapture_error">Memoria esterna non presente. Impossibile registrare.</string>
	<string name="label_recording">Registrazione in corso&#8230;&#8230;&#8230;</string>
	<string name="cd_recording_image">Registrazione in corso</string>
	<string name="stop">STOP</string>
	
	<!-- Toast -->
	<string name="toast_note_deleted">nota cancellata</string>
	<string name="toast_note_created">nota creata</string>
	<string name="toast_texteditor_activity">Premi BACK per inserire il testo</string>

	
	<string name="ok">OK</string>
    <string name="cancel">Annulla</string>
    <string name="error">Errore</string>
    
    <!-- content descriptions -->
    <string name="cd_main_listview">elenco delle note</string>
    <string name="cd_main_button">aggiungi nota</string>
    <string name="cd_showlist_title">titolo</string>
    <string name="cd_showlist_date">data di creazione</string>
    <string name="cd_showlist_content">contenuto</string>
    <string name="cd_showlist_calendar">pulsante aggiungi evento al calendario</string>
    <string name="cd_showlist_edit">pulsante modifica la nota</string>
    <string name="cd_showlist_zoom">pulsante zoom del carattere</string>
    <string name="cd_edit_title">campo di testo titolo</string>
    <string name="cd_edit_content">contentuto. premi MENU per aggiungere del contenuto</string>
    <string name="cd_edit_save">pulsante salva modifiche</string>
    <string name="cd_edit_cancel">pulsante annulla modifiche</string>
    <string name="cd_dialog_addtitle">campo di testo titolo</string>
    <string name="cd_voicerec_stop">pulsante stop registrazione</string>
    <string name="cd_calendar_date">pulsante modifica data</string>
    <string name="cd_calendar_time">pulsante modifica ora</string>
    <string name="cd_calendar_ok">pulsante ok</string>
    <string name="cd_link_edit">campo di testo link</string>
    <string name="cd_location_label">indirizzo</string>
    <string name="cd_location_button">pulsante apri nella mappa</string>
    <string name="cd_main_row">nota</string>   
</resources>
