<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/DimGrey"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="top"
    android:isScrollContainer="true"
    android:padding="10dp" >

    <EditText
        android:id="@+id/editlist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/label_content"
        android:contentDescription="@string/cd_edit_title"
        android:focusable="true"
        android:hint="@string/titolo"
        android:inputType="text"
        android:maxLines="1" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/label_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editlist_title"
        android:focusable="true"
        android:text="@string/content"
        android:textColor="@color/DarkBlue" />

    <TextView
        android:id="@+id/label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editlist_title"
        android:layout_alignBottom="@+id/editlist_title"
        android:layout_alignLeft="@+id/label_content"
        android:focusable="true"
        android:text="@string/titolo"
        android:textColor="@color/DarkBlue" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:focusable="true" >

        <ImageButton
            android:id="@+id/button_save"
            style="@style/item_buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/cd_edit_save"
            android:focusable="true"
            android:src="@drawable/ic_menu_ok" />

        <ImageButton
            android:id="@+id/button_cancel"
            style="@style/item_buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/cd_edit_cancel"
            android:focusable="true"
            android:src="@drawable/ic_menu_cancel" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/label_content"
        android:fadeScrollbars="false"
        android:focusable="true"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_edit_content"
            android:focusable="true"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</RelativeLayout>